--- a/about.html
+++ b/about.html
@@ -57,16 +57,17 @@
             </ul>
         </div>
         <div class="header_login">
-            <a href="#">
-                Đăng kí
+            <a href="cart.html">
+                <i class="fa-solid fa-cart-shopping"></i>
             </a>
-            <button class="btn_normal text-white">
-                Đăng nhập
-            </button>
+            <a href="login.html">
+                <i class="fa-solid fa-user"></i>
+            </a>
+            <a class="header_menu">
+                <i class="fa-solid fa-bars"></i>
+            </a>
         </div>
-        <div class="header_menu">
-            <i class="fa-solid fa-bars"></i>
-        </div>
+
         <div class="dropdown hide">
             <ul>
                 <li>
@@ -292,9 +293,9 @@
                 <ul class="wrapper_link">
                     <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="about.html">Giới thiệu</a></li>
-                    <li><a href=""> Sản phẩm</a></li>
-                    <li><a href="">Tin tức</a></li>
-                    <li><a href="">Bảo hành</a></li>
+                    <li><a href="product.html"> Sản phẩm</a></li>
+                    <li><a href="news.html">Tin tức</a></li>
+                    <li><a href="contact.html">Liên hệ</a></li>
                 </ul>
 
                 <div class="frame">
@@ -310,7 +311,6 @@
             </div>
         </div>
     </div>
-
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
