--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body>
+<body style="background: #f0f1f5;">
     <!-- header -->
     <div class="header">
         <div class="header_logo">
@@ -58,16 +58,17 @@
             </ul>
         </div>
         <div class="header_login">
-            <a href="#">
-                Đăng kí
+            <a href="cart.html">
+                <i class="fa-solid fa-cart-shopping"></i>
             </a>
-            <button class="btn_normal text-white">
-                Đăng nhập
-            </button>
+            <a href="login.html">
+                <i class="fa-solid fa-user"></i>
+            </a>
+            <a class="header_menu">
+                <i class="fa-solid fa-bars"></i>
+            </a>
         </div>
-        <div class="header_menu">
-            <i class="fa-solid fa-bars"></i>
-        </div>
+
         <div class="dropdown hide">
             <ul>
                 <li>
@@ -97,7 +98,6 @@
                 </li>
             </ul>
         </div>
-
     </div>
 
 
@@ -105,6 +105,7 @@
     <div class="form">
         <div class="container">
             <form action="" id="form-contact">
+                <h1>Điền thông tin liên hệ</h1>
                 <div class="row">
                     <div class="form-group col-12 col-md-6">
                         <label for="firstName">Họ </label>
@@ -161,9 +162,9 @@
                 <ul class="wrapper_link">
                     <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="about.html">Giới thiệu</a></li>
-                    <li><a href=""> Sản phẩm</a></li>
-                    <li><a href="">Tin tức</a></li>
-                    <li><a href="">Bảo hành</a></li>
+                    <li><a href="product.html"> Sản phẩm</a></li>
+                    <li><a href="news.html">Tin tức</a></li>
+                    <li><a href="contact.html">Liên hệ</a></li>
                 </ul>
 
                 <div class="frame">
