--- a/index.html
+++ b/index.html
@@ -57,16 +57,17 @@
             </ul>
         </div>
         <div class="header_login">
-            <a href="#">
-                Đăng kí
+            <a href="cart.html">
+                <i class="fa-solid fa-cart-shopping"></i>
             </a>
-            <button class="btn_normal text-white">
-                Đăng nhập
-            </button>
+            <a href="login.html">
+                <i class="fa-solid fa-user"></i>
+            </a>
+            <a class="header_menu">
+                <i class="fa-solid fa-bars"></i>
+            </a>
         </div>
-        <div class="header_menu">
-            <i class="fa-solid fa-bars"></i>
-        </div>
+
         <div class="dropdown hide">
             <ul>
                 <li>
@@ -95,21 +96,6 @@
                     </a>
                 </li>
             </ul>
-        </div>
-    </div>
-    <!-- start -->
-    <div class="start">
-        <div class="fill"></div>
-        <div class="start_body">
-            <h1>
-                Chào mừng bạn đến với T1 Esports
-            </h1>
-            <blockquote>
-                Khám phá thêm nhiều thông tin hữu ích giúp bạn nâng cao kỹ năng và trải nghiệm tuyệt vời nhất
-            </blockquote>
-            <button class="text-white">
-                Bắt đầu ngay
-            </button>
         </div>
     </div>
 
@@ -192,7 +178,7 @@
                     <div class="box_img">
                         <img src="assets/image/new-1.png" alt="">
                     </div>
-                    <a href="">
+                    <a href="news_detail.html">
                         Chỉ với một biểu ngữ, T1 đã thể hiện sức mạnh vượt trội so với các đối thủ trong LCK
                     </a>
                 </div>
@@ -200,7 +186,7 @@
                     <div class="box_img">
                         <img src="assets/image/new-2.jpg" alt="">
                     </div>
-                    <a href="">
+                    <a href="news_detail.html">
                         CEO T1 chia sẻ đội tuyển bị "chơi xỏ" bởi người đại diện Zeus
                     </a>
                 </div>
@@ -208,7 +194,7 @@
                     <div class="box_img">
                         <img src="assets/image/new-3.jpg" alt="">
                     </div>
-                    <a href="">
+                    <a href="news_detail.html">
                         Các kỷ lục mới mà Faker và đồng đội vừa thiết lập tại CKTG 2024
                     </a>
                 </div>
@@ -319,9 +305,9 @@
                 <ul class="wrapper_link">
                     <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="about.html">Giới thiệu</a></li>
-                    <li><a href=""> Sản phẩm</a></li>
-                    <li><a href="">Tin tức</a></li>
-                    <li><a href="">Bảo hành</a></li>
+                    <li><a href="product.html"> Sản phẩm</a></li>
+                    <li><a href="news.html">Tin tức</a></li>
+                    <li><a href="contact.html">Liên hệ</a></li>
                 </ul>
 
                 <div class="frame">
