--- a/login.html
+++ b/login.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylelogin.css">
+    <link rel="stylesheet" href="assets/css/stylelogin.css">
     <title>Login/Register</title>
-   
+
 </head>
+
 <body>
     <div class="container" id="login-section">
         <div class="form-box">
@@ -66,7 +68,7 @@
         function toggleForms() {
             const loginSection = document.getElementById('login-section');
             const registerSection = document.getElementById('register-section');
-            
+
             if (loginSection.style.display === 'none') {
                 loginSection.style.display = 'flex';
                 registerSection.style.display = 'none';
@@ -77,4 +79,5 @@
         }
     </script>
 </body>
+
 </html>
