--- a/login.html
+++ b/login.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/stylelogin.css">
-    <title>Login/Register</title>
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/stylelogin2.css">
 
+    <title>Login</title>
 </head>
 
 <body>
     <div class="container" id="login-section">
         <div class="form-box">
-            <h2>Login</h2>
+            <h2>Đăng nhập</h2>
             <form action="#" method="POST">
                 <div class="form-group">
                     <label for="login-email">Email</label>
@@ -20,64 +21,18 @@
                     <span class="form-message"></span>
                 </div>
                 <div class="form-group">
-                    <label for="login-password">Password</label>
+                    <label for="login-password">Mật khẩu</label>
                     <input type="password" id="login-password" name="password" required>
                     <span class="form-message"></span>
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <button type="submit" class="btn">Đăng nhập</button>
                 <div class="switch-form">
-                    <a onclick="toggleForms()">Don't have an account? Register here</a>
+                    <a href="register.html">Bạn chưa có tài khoản? Đăng kí</a>
                 </div>
             </form>
         </div>
     </div>
 
-    <div class="container" id="register-section">
-        <div class="form-box">
-            <h2>Register</h2>
-            <form action="#" method="POST">
-                <div class="form-group">
-                    <label for="register-name">Full Name</label>
-                    <input type="text" id="register-name" name="name" required>
-                    <span class="form-message"></span>
-                </div>
-                <div class="form-group">
-                    <label for="register-email">Email</label>
-                    <input type="email" id="register-email" name="email" required>
-                    <span class="form-message"></span>
-                </div>
-                <div class="form-group">
-                    <label for="register-password">Password</label>
-                    <input type="password" id="register-password" name="password" required>
-                    <span class="form-message"></span>
-                </div>
-                <div class="form-group">
-                    <label for="confirm-password">Confirm Password</label>
-                    <input type="password" id="confirm-password" name="confirm-password" required>
-                    <span class="form-message"></span>
-                </div>
-                <button type="submit" class="btn">Register</button>
-                <div class="switch-form">
-                    <a onclick="toggleForms()">Already have an account? Login here</a>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <script>
-        function toggleForms() {
-            const loginSection = document.getElementById('login-section');
-            const registerSection = document.getElementById('register-section');
-
-            if (loginSection.style.display === 'none') {
-                loginSection.style.display = 'flex';
-                registerSection.style.display = 'none';
-            } else {
-                loginSection.style.display = 'none';
-                registerSection.style.display = 'flex';
-            }
-        }
-    </script>
 </body>
 
 </html>
